[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
bytes = "1.5.0"
h3 = { version = "0.0.3", git = "https://github.com/hyperium/h3.git" }
h3-quinn = { version = "0.0.4", git = "https://github.com/hyperium/h3.git" }
h3-webtransport = { version = "0.1.0", git = "https://github.com/hyperium/h3.git" }
http = "1"
quinn = { version = "0.10.2", features = ["ring"] }
rustls = "0.21"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "io-std"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
